NLP TP/texts/robotics/robotics.stackexchange_0000055031.txt
Q:

Building PCL on OSX 10.9

After installing OSX 10.9, PCL does not build anymore. There were a few compilation and linking problems related to VTK 6.0, that I resolved somehow see this discussion.
Now there is a compilation error
[ 21%] Building CXX object filters/CMakeFiles/pcl_filters.dir/src/extract_indices.cpp.o
In file included from /Users/user/Documents/temp/pcl/pcl/filters/src/extract_indices.cpp:41:
In file included from /Users/user/Documents/temp/pcl/pcl/filters/include/pcl/filters/impl/extract_indices.hpp:43:
In file included from /Users/user/Documents/temp/pcl/pcl/filters/include/pcl/filters/extract_indices.h:43:
In file included from /Users/user/Documents/temp/pcl/pcl/filters/include/pcl/filters/filter_indices.h:43:
In file included from /Users/user/Documents/temp/pcl/pcl/filters/include/pcl/filters/filter.h:43:
In file included from /Users/user/Documents/temp/pcl/pcl/common/include/pcl/pcl_base.h:45:
In file included from /Users/user/Documents/temp/pcl/pcl/common/include/pcl/pcl_macros.h:69:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/iostream:38:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/ios:216:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/__locale:15:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:434:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:1795:32: error: cannot convert 'const pcl::Boundary' to
      'unsigned char' without a conversion operator
        _VSTD::memset(__first, (unsigned char)__value_, (size_t)(__n));
                               ^~~~~~~~~~~~~~~~~~~~~~~

Any ideas how to resolve this?

Originally posted by Artem on ROS Answers with karma: 709 on 2013-10-25
Post score: 2

Original comments
Comment by Hansg91 on 2013-10-26:
I also tried to compile the latest version of https://github.com/kylelutz/pcl.git and with the vtk6-fixes branch, but then I get some eigen error ...
Comment by Ivano on 2013-10-26:
The eigen issue has been solved here https://github.com/PointCloudLibrary/pcl/issues/283
Regarding the rest, I'm getting the same errors as yourself above after upgrading to Mavericks. V frustrating...

A:

By adding the two following lines in the file CMakeLists.txt
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftemplate-depth=1024")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
under
string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
I've managed to get PCL 1.7.1 built succesfully on OS 10.9. That should also work for the trunk.
It seems that these kind of issues boil down to the swap of defaults libstdc++ / libc++ in Xcode 5.0.1

Originally posted by Ivano with karma: 36 on 2013-10-26
This answer was ACCEPTED on the original site
Post score: 2

Original comments
Comment by Artem on 2013-10-26:
Thanks Ivano! It did help to pass those errors. I got stuck with linking errors.
Undefined symbols for architecture x86_64:
"vtkObjectBase::PrintHeader(std::ostream&, vtkIndent)", referenced from:
vtable for pcl::visualization::PointPickingCallback in point_picking_event.cpp.o
vtable for pcl::visualization::PCLVisualizerInteractorStyle in interactor_style.cpp.o
...
Comment by Artem on 2013-10-26:
What version of VTK did you install?
Comment by Artem on 2013-10-26:
Adding -DBUILD_visualization=off allowed me successfuly built PCL. Did you have to turn visualisation off too?
Comment by Ivano on 2013-10-27:
Awesome. No, I didn't need the VTK I'm afraid. Anyway here (https://developer.nvidia.com/cuda-downloads) you can find the new CUDA library for OS X 10.9 rolled out from NVIDIA just last night.
Comment by Hansg91 on 2013-10-27:
Just a small side question, did you manage to install qt? It doesnt compile for me.
Comment by Artem on 2013-10-27:
Nope, here is a discussion on this issue https://github.com/mxcl/homebrew/issues/21000
Comment by Hansg91 on 2013-10-28:
I managed to compile Qt, using the patches from here: https://codereview.qt-project.org/#change,69325
Comment by Ivano on 2013-10-28:
Cool. Thanks!

